--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -8,10 +8,27 @@
 @import "base";
 
 .navbar {
-  background-color: #f3c859;
+  background-color: $primary-darker;
   color: white;
 
   a {
     color: white;
   }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $font-family-serif;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2.5em;
+}
+
+h2 {
+  font-size: 1.8em;
+}
+
+h3 {
+  font-style: italic;
 }
