--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -37,10 +37,10 @@ html lang="en"
               aside.fixed role='complementary'
                 nav.list-group role='navigation'
                   = link_to 'Data Sources & Infrastructure', '#infrastructure',    class: 'list-group-item'
-                  = link_to 'Data Exploration',              '#data-exploration',  class: 'list-group-item'
                   = link_to 'Approach',                      '#approach',          class: 'list-group-item'
                   = link_to 'Literature Review',             '#literature-review', class: 'list-group-item'
                   = link_to 'Error Analysis',                '#error-analysis',    class: 'list-group-item'
+                  = link_to 'Feature Analysis',              '#feature-analysis',  class: 'list-group-item'
 
     footer role='contentinfo'
       .container
