--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -44,7 +44,7 @@ html lang="en"
 
     footer role='contentinfo'
       .container
-        small &copy;
+        small &nbsp;
 
     /! JavaScript
     = javascript_include_tag 'main'
